--- a/P5-WPF/BatchAdd.xaml
+++ b/P5-WPF/BatchAdd.xaml
@@ -19,11 +19,11 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Label>BatchNr:</Label>
-        <TextBox Grid.Column="1" Margin="0,0,0,10" />
+        <TextBox Grid.Column="1" Margin="0,0,0,10" Name="BatchNr" />
         <Label Grid.Row="1">Temp:</Label>
-        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,10" />
+        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,0,0,10" Name="Temp" />
         <Label Grid.Row="2">Shelf:</Label>
-        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" />
+        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,0,0,10" Name ="Shelf"/>
         <Button Click="addToDB" Grid.Row="3" Grid.Column="0">
             <WrapPanel>
                 <TextBlock>Tilføj Data til DB</TextBlock>
@@ -31,3 +31,4 @@
         </Button>
     </Grid>
 </Window>
+
