--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -21,7 +21,7 @@
                 <TextBlock>Tilføj Batch</TextBlock>
             </WrapPanel>
         </Button>
-        <Button Click="Test_Click" HorizontalAlignment="Center"  Background="CadetBlue" Foreground="PaleGreen" FontSize="20" FontWeight="Bold" Margin="549,352,30,22" Width="213" Name="test_button">
+        <Button Click="BatchInfo" HorizontalAlignment="Center"  Background="CadetBlue" Foreground="PaleGreen" FontSize="20" FontWeight="Bold" Margin="549,352,30,22" Width="213" Name="test_button">
             <WrapPanel>
                 <TextBlock><Run Text="TEST"/></TextBlock>
             </WrapPanel>
