--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -8,15 +8,15 @@
         Title="MainWindow" Height="450" Width="800">
 
 
-    <Window.DataContext>
-        <local:BatchesVm />
-    </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <ListView ItemsSource="{Binding allBatches}" x:Name="batcheslist" MouseDoubleClick="batchesList_MouseDoubleClick" Margin="166,90,57,73" Grid.ColumnSpan="2">
+
+
+
+        <ListView ItemsSource="{Binding allBatches}" x:Name="batcheslist"  Margin="72,100,59,63" Grid.ColumnSpan="2" MouseDoubleClick="batchesList_MouseDoubleClick" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=BatchID}" Header="BatchID" Width="70"/>
@@ -27,8 +27,21 @@
             </ListView.View>
         </ListView>
 
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Height="28" Margin="166,55,279,336" Width="131" x:Name="aktivebatches" Text="Aktive Batches" />
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Height="40" Margin="287,10,34,369" Width="255" x:Name="headtext" Text="Novefa observeringssystem"/>
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Margin="94,60,442,330">
+            Filter:
+        </Label>
+        <TextBox
+            Grid.Row="0"
+            Margin="139,60,135,336"
+            VerticalAlignment="Center"
+            Text="{Binding Path=FilterText, UpdateSourceTrigger=PropertyChanged}" Height="23" Grid.ColumnSpan="2" />
+
+
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Height="28" Margin="27,10,418,381" Width="131" x:Name="aktivebatches" Text="Aktive Batches" />
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Height="40" Margin="258,0,63,379" Width="255" x:Name="headtext" Text="Novefa observeringssystem"/>
         <Button Click="Batch_Click" HorizontalAlignment="Center"  FontWeight="Bold" Margin="27,361,403,13" Width="146"  Name="tables_button">
             <WrapPanel>
                 <TextBlock>Tilføj Batch</TextBlock>
