--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -42,9 +42,9 @@
 
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Height="28" Margin="27,10,418,381" Width="131" x:Name="aktivebatches" Text="Aktive Batches" />
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Height="40" Margin="258,0,63,379" Width="255" x:Name="headtext" Text="Novefa observeringssystem"/>
-        <Button Click="Batch_Click" HorizontalAlignment="Center"  FontWeight="Bold" Margin="27,361,403,13" Width="146"  Name="tables_button">
+        <Button Click="RefreshTable" HorizontalAlignment="Center"  FontWeight="Bold" Margin="27,361,403,13" Width="146"  Name="tables_button">
             <WrapPanel>
-                <TextBlock>Tilføj Batch</TextBlock>
+                <TextBlock>Genindlæs tabel</TextBlock>
             </WrapPanel>
         </Button>
         <Button Click="BatchInfo" HorizontalAlignment="Center"  Background="CadetBlue" Foreground="PaleGreen" FontSize="20" FontWeight="Bold" Margin="558,357,21,17" Width="213" Name="test_button" Grid.ColumnSpan="2">
