--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -8,12 +8,12 @@
         Title="Novefa Observeringssystem" Height="450" Width="800">
 
 
-    <Grid>
+    <Grid Margin="0,0,-8,-21">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-
+    
         <ListView ItemsSource="{Binding allBatches}" x:Name="batcheslist"  Margin="72,100,59,63" Grid.ColumnSpan="2" MouseDoubleClick="batchesList_MouseDoubleClick" >
             <ListView.View>
                 <GridView>
@@ -38,11 +38,12 @@
 
         <TextBlock VerticalAlignment="Center" FontSize="20" Height="35" Margin="27,26,278,358" x:Name="aktivebatches" Text="Aktive Batches for hylde no. 2" />
         <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Height="40" Margin="258,0,63,379" Width="255" x:Name="headtext" Text="Novefa observeringssystem"/>
-        <Button Click="RefreshTable" HorizontalAlignment="Center"  FontWeight="Bold" Margin="27,361,403,13" Width="146"  Name="tables_button">
+        <Button Click="RefreshTable" HorizontalAlignment="Center"  FontWeight="Bold" Margin="72,377,359,26" Width="151"  Name="tables_button">
             <WrapPanel>
-                <TextBlock>Genindlæs tabel</TextBlock>
+                <TextBlock>Refresh table</TextBlock>
             </WrapPanel>
         </Button>
+        <TextBlock x:Name="TimerDisplay" Margin="533,375,59,26" Grid.ColumnSpan="2">Time since last refresh :</TextBlock>
         <!--<Button Click="BatchInfo" HorizontalAlignment="Center"  Background="CadetBlue" Foreground="PaleGreen" FontSize="20" FontWeight="Bold" Margin="558,357,21,17" Width="213" Name="test_button" Grid.ColumnSpan="2">
             <WrapPanel>
                 <TextBlock><Run Text="Næste hyldeposition"/></TextBlock>
