--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -13,7 +13,7 @@
             <ColumnDefinition Width="8*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-    
+
         <ListView ItemsSource="{Binding allBatches}" x:Name="batcheslist"  Margin="72,100,59,63" Grid.ColumnSpan="2" MouseDoubleClick="batchesList_MouseDoubleClick" >
             <ListView.View>
                 <GridView>
@@ -43,7 +43,8 @@
                 <TextBlock>Refresh table</TextBlock>
             </WrapPanel>
         </Button>
-        <TextBlock x:Name="TimerDisplay" Margin="533,375,59,26" Grid.ColumnSpan="2">Time since last refresh :</TextBlock>
+        <Label Margin="427,375,10,33">Time since last refresh :</Label>
+        <TextBlock x:Name="TimerDisplay" Margin="560,377,32,24" Grid.ColumnSpan="2"></TextBlock>
         <!--<Button Click="BatchInfo" HorizontalAlignment="Center"  Background="CadetBlue" Foreground="PaleGreen" FontSize="20" FontWeight="Bold" Margin="558,357,21,17" Width="213" Name="test_button" Grid.ColumnSpan="2">
             <WrapPanel>
                 <TextBlock><Run Text="Næste hyldeposition"/></TextBlock>
