--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="P5_WPF.MainWindow"
+﻿<Window ResizeMode="NoResize" x:Class="P5_WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:P5_WPF" xmlns:local1="clr-namespace:P5_WPF.ViewModels" xmlns:d3="clr-namespace:System.Windows.Forms.DataVisualization.Charting;assembly=System.Windows.Forms.DataVisualization"
         mc:Ignorable="d"
         Title="Novefa Observeringssystem" Height="450" Width="800">
+    
 
 
     <Grid Margin="0,0,-8,-21">
@@ -37,12 +38,13 @@
             Text="{Binding Path=FilterText, UpdateSourceTrigger=PropertyChanged}" Height="26" Grid.ColumnSpan="2" />
 
         <TextBlock VerticalAlignment="Center" FontSize="20" Height="35" Margin="27,26,278,358" x:Name="aktivebatches" Text="Aktive Batches for hylde no. 2" />
-        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Height="40" Margin="258,0,63,379" Width="255" x:Name="headtext" Text="Novefa observeringssystem"/>
+        
         <Button Click="RefreshTable" HorizontalAlignment="Center"  FontWeight="Bold" Margin="72,377,359,26" Width="151"  Name="tables_button">
             <WrapPanel>
                 <TextBlock>Refresh table</TextBlock>
             </WrapPanel>
         </Button>
+        <Image Source="/Images/Novefa_Logo.PNG" Margin="266,-49,80,306" />
         <Label Margin="427,377,10,31">Time of last refresh :</Label>
         <TextBlock x:Name="TimerDisplay" Margin="543,382,49,33" Grid.ColumnSpan="2"></TextBlock>
         <!--<Button Click="BatchInfo" HorizontalAlignment="Center"  Background="CadetBlue" Foreground="PaleGreen" FontSize="20" FontWeight="Bold" Margin="558,357,21,17" Width="213" Name="test_button" Grid.ColumnSpan="2">
