--- a/P5-WPF/SingleBatch_Window.xaml
+++ b/P5-WPF/SingleBatch_Window.xaml
@@ -1,4 +1,4 @@
-﻿<Window ResizeMode="NoResize" x:Class="P5_WPF.SingleBatch_Window"
+﻿<Window x:Class="P5_WPF.SingleBatch_Window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,13 +9,14 @@
 
     <Grid>
 
+
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="52*"/>
-            <ColumnDefinition Width="263*"/>
-            <ColumnDefinition Width="59*"/>
-            <ColumnDefinition Width="140*"/>
+            <ColumnDefinition Width="57*"/>
+            <ColumnDefinition Width="287*"/>
+            <ColumnDefinition Width="53*"/>
+            <ColumnDefinition Width="164*"/>
         </Grid.ColumnDefinitions>
-        <ListView ItemsSource="{Binding singleBatch}" x:Name="batchinfo" Margin="62,66,161.51,67" Grid.ColumnSpan="2">
+        <ListView ItemsSource="{Binding singleBatch}" x:Name="batchinfo" Margin="62,66,164,31" Grid.ColumnSpan="2">
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=BatchID}" Header="Batch ID" Width="60"/>
@@ -25,15 +26,37 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <Canvas Grid.ColumnSpan="3">
-            <d3:Chart BottomTitle="Date" LeftTitle="Temperature" Height="287" Width="513" Canvas.Left="565" Canvas.Top="378">
+        <Label Foreground="Red" FontWeight="Bold" FontSize="15" Grid.ColumnSpan="3" Margin="492,34,30,646" Grid.Column="1">
+            <Label.Style>
+                <Style TargetType="{x:Type Label}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding humiditywithinRange}" Value="False">
+                            <Setter Property="Label.Content" Value="WARNING: HUMIDITY OUT OF RANGE WITHIN LAST HOUR" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Label.Style>
+        </Label>
+        <Label Foreground="Red" FontWeight="Bold" FontSize="15" Grid.ColumnSpan="3" Margin="492,362,10,324" Grid.Column="1">
+            <Label.Style>
+                <Style TargetType="{x:Type Label}">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding temperaturewithinRange}" Value="False">
+                            <Setter Property="Label.Content" Value="WARNING: TEMPERATURE OUT OF RANGE WITHIN LAST HOUR" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Label.Style>
+        </Label>
+        <Canvas Grid.ColumnSpan="2">
+            <d3:Chart BottomTitle="Date" LeftTitle="Temperature" Height="287" Width="513" Canvas.Left="565" Canvas.Top="398">
                 <d3:LineGraph x:Name="linegraphtemp" Description="Linjegraph of temperature over time" Stroke="DarkRed" StrokeThickness="3"/>
             </d3:Chart>
             <d3:Chart BottomTitle="Date" LeftTitle="Humidity" Height="285" Width="513" Canvas.Left="565" Canvas.Top="71">
                 <d3:LineGraph x:Name="linegraphhum" Description="Linegraph of humidity over time" Stroke="Blue" StrokeThickness="3"/>
             </d3:Chart>
         </Canvas>
-        <TextBlock VerticalAlignment="Center" FontSize="25" Height="67" Margin="88,10,142,652" x:Name="batchno" Text="{Binding Path=myTitle}" Grid.ColumnSpan="2" />
+
 
     </Grid>
 
