aesthetic tweaks functional tweaks - database query (order by timestamp) - warning algorithm still need final tweak (only checks final item)

--- a/P5-WPF/MainWindow.xaml
+++ b/P5-WPF/MainWindow.xaml
@@ -38,11 +38,11 @@
         </ListView>
 
 
-        <Label FontSize="20" FontWeight="Bold" Margin="10,35,303,325" Name="activetext">
+        <Label FontSize="20" FontWeight="Bold" Background="GhostWhite" Margin="282,19,62,380" Name="activetext">
             Batches in production
         </Label>
 
-        <Label FontSize="20" FontWeight="Bold" Margin="10,35,303,325" Name="archivetext" Visibility="Hidden">
+        <Label FontSize="20" FontWeight="Bold" Background="GhostWhite" Margin="282,23,62,366" Name="archivetext" Visibility="Hidden">
             Archived Batches
         </Label>
 
@@ -51,15 +51,15 @@
                 <TextBlock>Refresh table</TextBlock>
             </WrapPanel>
         </Button>
-        <Image Source="/Images/Novefa_Logo.PNG" Margin="266,-49,80,306" />
+        <Image Source="/Images/Novefa_Logo.PNG" Margin="10,-58,374,324" />
         <Label Margin="427,377,10,31">Time of last refresh :</Label>
         <TextBlock x:Name="TimerDisplay" Margin="543,382,49,33" Grid.ColumnSpan="2"></TextBlock>
-        <Button Click="NotVisible_Click" HorizontalAlignment="Center"  Background="Black" Foreground="DarkBlue" FontSize="15" FontWeight="Bold" Margin="10,24,37,380" Width="172" Name="archive_button" Grid.Column="1">
+        <Button Click="NotVisible_Click" HorizontalAlignment="Center"  Foreground="DarkBlue" FontSize="15" FontWeight="Bold" Margin="10,24,37,380" Width="172" Name="archive_button" Grid.Column="1">
             <WrapPanel>
                 <TextBlock><Run Text="Show archived batches"/></TextBlock>
             </WrapPanel>
         </Button>
-        <Button HorizontalAlignment="Center" Visibility="Hidden" Background="Black" Foreground="DarkBlue" FontSize="15" FontWeight="Bold" Margin="10,24,37,380" Width="172" Click="Visible_Click" Name="active_button" Grid.Column="1">
+        <Button HorizontalAlignment="Center" Visibility="Hidden" Foreground="DarkBlue" FontSize="15" FontWeight="Bold" Margin="10,24,37,380" Width="172" Click="Visible_Click" Name="active_button" Grid.Column="1">
             <WrapPanel>
                 <TextBlock><Run Text="Show active Batches"/></TextBlock>
             </WrapPanel>
